testsuite/tests/unsatisfiable/UnsatInstance.stderr

UnsatInstance.hs:7:10: error: [GHC-97044]
    • Class ‘Unsatisfiable’ does not support user-specified instances.
    • In the instance declaration for ‘Unsatisfiable (Text "hello")’
