testsuite/tests/unsatisfiable/UnsatInstance.hs
{-# LANGUAGE DataKinds #-}

module UnsatInstance where

import GHC.TypeError

instance Unsatisfiable (Text "hello")
